# django-ecom-example

./: README.md  db.sqlite3  manage.py  pyproject.toml
DjangoEcommerce/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20200203_1649.py  0003_auto_20200205_1018.py  0004_auto_20200205_1029.py  0005_item_slug.py  0006_remove_item_slug.py  0007_item_discount_price.py  0008_item_description.py  0009_item_quantity.py  0010_orderitem_quantity.py  0011_remove_item_quantity.py  0012_auto_20200205_1209.py  0013_auto_20200205_1210.py  0014_checkoutaddress.py  0015_order_checkout_address.py  0016_payment.py  0017_order_payment.py  0018_alter_item_category_alter_item_label.py
templates/: base.html  checkout.html  footer.html  home.html  order_summary.html  payment.html  product.html
