[tool.poetry]
name = "django-ecom-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
django-allauth = "^0.58.2"
django-countries = "^7.5.1"
django-crispy-forms = "^2.1"
setuptools = "^69.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
